{
  "version": 4,
  "terraform_version": "1.14.6",
  "serial": 18,
  "lineage": "7092c3f2-1393-eec5-83e9-bfbcde8d4057",
  "resources": [
    {
      "mode": "data",
      "type": "aws_internet_gateway",
      "name": "existing",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:539247450175:internet-gateway/igw-0fed3cfd38607d94b",
            "attachments": [
              {
                "state": "available",
                "vpc_id": "vpc-02855c98755e6b058"
              }
            ],
            "filter": [
              {
                "name": "attachment.vpc-id",
                "values": [
                  "vpc-02855c98755e6b058"
                ]
              }
            ],
            "id": "igw-0fed3cfd38607d94b",
            "internet_gateway_id": "igw-0fed3cfd38607d94b",
            "owner_id": "539247450175",
            "region": "eu-west-3",
            "tags": {
              "Name": "cyberpunks_igw"
            }
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "data",
      "type": "aws_vpc",
      "name": "existing",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:539247450175:vpc/vpc-02855c98755e6b058",
            "cidr_block": "10.0.0.0/16",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-059ad2912f9a63d2d",
                "cidr_block": "10.0.0.0/16",
                "state": "associated"
              }
            ],
            "default": false,
            "dhcp_options_id": "dopt-06a98459dce0caec1",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "filter": [
              {
                "name": "tag:Name",
                "values": [
                  "cyberpunks_vpc"
                ]
              }
            ],
            "id": "vpc-02855c98755e6b058",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-028a47a8dd2bb97f0",
            "owner_id": "539247450175",
            "region": "eu-west-3",
            "tags": {
              "Name": "cyberpunks_vpc"
            }
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "jenkins_server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-078abd88811000d7e",
            "arn": "arn:aws:ec2:eu-west-3:539247450175:instance/i-024bb7ab671a7f988",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-3a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-024bb7ab671a7f988",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.medium",
            "ipv6_address_count": 0,
            "key_name": "pratas",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-0033872e2190f5eb4"
              }
            ],
            "primary_network_interface_id": "eni-0033872e2190f5eb4",
            "private_dns": "ip-10-0-229-237.eu-west-3.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.229.237",
            "public_dns": "ec2-52-47-202-221.eu-west-3.compute.amazonaws.com",
            "public_ip": "52.47.202.221",
            "region": "eu-west-3",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-006771d61c4667df4",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0feb8d1c4b80c14e2",
            "tags": {
              "Name": "jenkins-server",
              "Role": "ci-cd"
            },
            "tags_all": {
              "Name": "jenkins-server",
              "Role": "ci-cd"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-022859d4c5b0decfa"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "539247450175",
            "id": "i-024bb7ab671a7f988",
            "region": "eu-west-3"
          },
          "dependencies": [
            "aws_security_group.devops_sg",
            "aws_subnet.public",
            "data.aws_vpc.existing"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "k8s_master",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-078abd88811000d7e",
            "arn": "arn:aws:ec2:eu-west-3:539247450175:instance/i-0a57d53f355900d5b",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-3a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0a57d53f355900d5b",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.small",
            "ipv6_address_count": 0,
            "key_name": "pratas",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-07bc0932e8c110d1d"
              }
            ],
            "primary_network_interface_id": "eni-07bc0932e8c110d1d",
            "private_dns": "ip-10-0-229-198.eu-west-3.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.229.198",
            "public_dns": "ec2-13-39-112-153.eu-west-3.compute.amazonaws.com",
            "public_ip": "13.39.112.153",
            "region": "eu-west-3",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-05a98b2517c188818",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0feb8d1c4b80c14e2",
            "tags": {
              "Name": "k8s-master",
              "Role": "kubernetes-control-plane"
            },
            "tags_all": {
              "Name": "k8s-master",
              "Role": "kubernetes-control-plane"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-022859d4c5b0decfa"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "539247450175",
            "id": "i-0a57d53f355900d5b",
            "region": "eu-west-3"
          },
          "dependencies": [
            "aws_security_group.devops_sg",
            "aws_subnet.public",
            "data.aws_vpc.existing"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "k8s_worker",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-078abd88811000d7e",
            "arn": "arn:aws:ec2:eu-west-3:539247450175:instance/i-03067534f2d46c996",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-3a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-03067534f2d46c996",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.large",
            "ipv6_address_count": 0,
            "key_name": "pratas",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-05f860edc8487f1c8"
              }
            ],
            "primary_network_interface_id": "eni-05f860edc8487f1c8",
            "private_dns": "ip-10-0-229-137.eu-west-3.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.229.137",
            "public_dns": "ec2-52-47-164-250.eu-west-3.compute.amazonaws.com",
            "public_ip": "52.47.164.250",
            "region": "eu-west-3",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-03969be28f22a8a12",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0feb8d1c4b80c14e2",
            "tags": {
              "Name": "k8s-worker",
              "Role": "kubernetes-worker"
            },
            "tags_all": {
              "Name": "k8s-worker",
              "Role": "kubernetes-worker"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-022859d4c5b0decfa"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "539247450175",
            "id": "i-03067534f2d46c996",
            "region": "eu-west-3"
          },
          "dependencies": [
            "aws_security_group.devops_sg",
            "aws_subnet.public",
            "data.aws_vpc.existing"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "sonarqube_server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-078abd88811000d7e",
            "arn": "arn:aws:ec2:eu-west-3:539247450175:instance/i-09338056a21f5f141",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-3a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-09338056a21f5f141",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.medium",
            "ipv6_address_count": 0,
            "key_name": "pratas",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-0d4314ae01de6112a"
              }
            ],
            "primary_network_interface_id": "eni-0d4314ae01de6112a",
            "private_dns": "ip-10-0-229-215.eu-west-3.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.229.215",
            "public_dns": "ec2-35-180-136-14.eu-west-3.compute.amazonaws.com",
            "public_ip": "35.180.136.14",
            "region": "eu-west-3",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-05b5ab8cc6b41ef0f",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0feb8d1c4b80c14e2",
            "tags": {
              "Name": "sonarqube-server",
              "Role": "quality"
            },
            "tags_all": {
              "Name": "sonarqube-server",
              "Role": "quality"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-022859d4c5b0decfa"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "539247450175",
            "id": "i-09338056a21f5f141",
            "region": "eu-west-3"
          },
          "dependencies": [
            "aws_security_group.devops_sg",
            "aws_subnet.public",
            "data.aws_vpc.existing"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:539247450175:route-table/rtb-0c98e5ef91382d513",
            "id": "rtb-0c98e5ef91382d513",
            "owner_id": "539247450175",
            "propagating_vgws": [],
            "region": "eu-west-3",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0fed3cfd38607d94b",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "kuikvengers_alaeddine_public_rt"
            },
            "tags_all": {
              "Name": "kuikvengers_alaeddine_public_rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-02855c98755e6b058"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "539247450175",
            "id": "rtb-0c98e5ef91382d513",
            "region": "eu-west-3"
          },
          "dependencies": [
            "data.aws_internet_gateway.existing",
            "data.aws_vpc.existing"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-058c9f3cc7688749b",
            "region": "eu-west-3",
            "route_table_id": "rtb-0c98e5ef91382d513",
            "subnet_id": "subnet-0feb8d1c4b80c14e2"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "539247450175",
            "id": "rtbassoc-058c9f3cc7688749b",
            "region": "eu-west-3"
          },
          "dependencies": [
            "aws_route_table.public_rt",
            "aws_subnet.public",
            "data.aws_internet_gateway.existing",
            "data.aws_vpc.existing"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "devops_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:539247450175:security-group/sg-022859d4c5b0decfa",
            "description": "Security group for DevOps tools and K8s",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-022859d4c5b0decfa",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 10250,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 10250
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 6443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 6443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 9000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 9000
              }
            ],
            "name": "kuikvengers-devops-sg",
            "name_prefix": "",
            "owner_id": "539247450175",
            "region": "eu-west-3",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "kuikvengers-devops-sg"
            },
            "tags_all": {
              "Name": "kuikvengers-devops-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-02855c98755e6b058"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "539247450175",
            "id": "sg-022859d4c5b0decfa",
            "region": "eu-west-3"
          },
          "dependencies": [
            "data.aws_vpc.existing"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:539247450175:subnet/subnet-0feb8d1c4b80c14e2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-3a",
            "availability_zone_id": "euw3-az1",
            "cidr_block": "10.0.229.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0feb8d1c4b80c14e2",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "539247450175",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "eu-west-3",
            "tags": {
              "Name": "kuikvengers_alaeddine_public_subnet"
            },
            "tags_all": {
              "Name": "kuikvengers_alaeddine_public_subnet"
            },
            "vpc_id": "vpc-02855c98755e6b058"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "539247450175",
            "id": "subnet-0feb8d1c4b80c14e2",
            "region": "eu-west-3"
          },
          "dependencies": [
            "data.aws_vpc.existing"
          ]
        }
      ]
    }
  ]
}